@@ -2,6 +2,9 @@
 
 2007-02-05	Konstantin V. Arkhipov
 
+	* main/DAOs/Workers/: all workers are now calls dao's uncacheLists(),
+	so you can now override it.
+
 	* meta/builders/, main/DAOs/, main/Containers/: all helpers are
 	ordinary methods now, all static stuff reverted (see 2006-12-24 for
 	details).
